tests/fails/f33.t

terra bar()
end

bar:compile()
local what = bar.variants[1].fptr

terra foo()
   var a  = what
end
foo()